--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -600,7 +600,7 @@ h6 {
   display: inline-block;
   color: #1e1e1e;
   font-family: "Uniform";
-  /* font-weight: 500; */
+  font-weight: 700;
   /* text-transform: uppercase; */
   font-size: 16px;
   outline: none;
@@ -806,9 +806,9 @@ section {
   color: #1e1e1e;
   /* text-transform: uppercase; */
   text-align: center;
-  font-weight: 700;
+  /* font-weight: 700; */
   margin-bottom: 5px;
-  font-family: "Uniform Mdm";
+  font-family: "Uniform Bld";
 }
 
 .us-title-galeri {
@@ -903,11 +903,11 @@ section {
   border-radius: 18px;
   margin: auto;
   padding: 10px;
-  width: 250px;
+  width: 220px;
   line-height: 30px;
   text-align: center;
-  font-size: 16px;
-  /* font-weight: 700; */
+  font-size: 14px;
+  font-weight: 700;
   color: #fff;
   font-family: "Uniform";
 }
@@ -977,7 +977,7 @@ hr.divisi {
 --------------------------------*/
 #about {
   background: #fff;
-  padding: 80px 0;
+  /* padding: 80px 0; */
 }
 
 #about p {
@@ -1069,6 +1069,11 @@ hr.divisi {
   border-radius: 2px;
 }
 
+.rounded-circle {
+  border-radius: 50% !important;
+  border: 6px solid #ffffff;
+}
+
 .rectangle {
   background: #046671;
   border-radius: 10px;
@@ -1083,8 +1088,8 @@ hr.divisi {
 }
 
 .footer-rectangle {
-  padding-top: 10px;
-  font-size: 20px;
+  padding-top: 15px;
+  font-size: 18px;
   background: #ff6c5c;
   margin: auto;
   width: 80%;
@@ -1093,7 +1098,7 @@ hr.divisi {
   text-align: center;
   /* font-size: 25px; */
   color: #fff;
-  font-family: "Uniform Mdm";
+  font-family: "Uniform Bld";
 }
 
 .footer-rectangle-galeri {
@@ -1135,7 +1140,7 @@ hr.divisi {
 #facts .counters p {
   color: #1e1e1e;
   padding: 0;
-  margin: 20px 20px 20px 0;
+  margin: 0 20px 0 20px;
   font-family: "Uniform Light";
   font-size: 18px;
 }
@@ -1218,7 +1223,7 @@ hr.line {
 
 #us {
   background-color: #ffffff;
-  padding: 80px 0 60px 0;
+  padding: 20px 0 60px 0;
 }
 
 #facts-profile .counters span {
@@ -1437,7 +1442,7 @@ hr.artikel {
   background: url(../img/icon/bg-galeri.png);
   /* background-color: #046671; */
   background-repeat: repeat-x;
-  background-size: 8% auto;
+  background-size: 7% auto;
   background-position: center;
   padding: 60px 0 60px 0;
   /* height: 300px; */
@@ -1449,12 +1454,13 @@ hr.artikel {
   border-radius: 18px;
   margin: auto;
   padding: 20px;
-  width: 250px;
+  width: 220px;
   /* line-height: 30px; */
   text-align: center;
-  font-size: 18px;
+  font-size: 14px;
   color: #fff;
-  font-family: "Uniform Mdm";
+  font-weight: 700;
+  font-family: "Uniform";
 }
 
 /* Galeri */
@@ -1462,7 +1468,8 @@ hr.artikel {
 /* Footer  */
 .site-footer h5 {
   color: #ffffff;
-  font-size: 28px;
+  font-size: 24px;
+  letter-spacing: 1px;
   font-family: "Kenyan Coffe";
 }
 
@@ -1476,7 +1483,7 @@ hr.artikel {
 
 .text-footer {
   color: #ffffff;
-  font-size: 18px;
+  font-size: 16px;
   font-family: "Uniform Light";
 }
 
@@ -1500,6 +1507,7 @@ hr.artikel {
   background: #fff;
   padding: 6px 10px;
   position: relative;
+  /* width: 500px; */
   border-radius: 4px;
 }
 
