--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,15 +218,26 @@ h6 {
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
-#hero {
-  /* margin-top: 6rem; */
-  width: 100%;
-  padding: 0 7%;
-  display: table;
-  margin: 0;
-  max-width: 100%;
 
-  background-image: url(/assets/img/konten-header/Header-Home-940-600px-Tanpa-Teks.jpg);
+#img-home {
+  margin-top: 1.5rem;
+  background-image: url(../img/konten-header/Header-Home.png);
+  /* width: 100%; */
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 60vh;
+}
+
+#hero {
+  margin-top: 6rem;
+  width: 100%;
+  /* padding: 0 7%; */
+  /* display: table; */
+  /* margin: 0; */
+  /* max-width: 100%; */
+
+  background-image: url(/assets/img/konten-header/Header-Home.png);
   background-repeat: no-repeat;
   background-size: cover;
   height: 80vh;
@@ -423,6 +434,54 @@ h6 {
   color: #fff;
 }
 
+#img-home .img-container {
+  position: absolute;
+  bottom: 0;
+  padding-bottom: 12rem;
+  top: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+}
+
+#img-home h1 {
+  text-align: center;
+  margin: 30px 0 10px 0;
+  font-size: 60px;
+  font-family: "Kenyan Coffe";
+  color: #fff;
+}
+
+@media screen and (max-width: 1366px) {
+  #img-home h1 {
+    text-align: center;
+    margin: 30px 0 10px 0;
+    font-size: 54px;
+    font-family: "Kenyan Coffe";
+    color: #fff;
+  }
+}
+
+@media screen and (max-width: 1366px) {
+  #img-home .img-container {
+    position: absolute;
+    bottom: 0;
+    padding-bottom: 6rem;
+    top: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+  }
+}
+
 #hero-profile h1 {
   /* padding-left: 10px; */
   margin: 30px 0 10px 0;
@@ -436,7 +495,7 @@ h6 {
 
 .hero-text h1 {
   margin: 30px 0 10px 0;
-  font-size: 52px;
+  font-size: 60px;
   /* font-weight: 700; */
   /* line-height: 56px; */
   font-family: "Kenyan Coffe";
@@ -446,7 +505,7 @@ h6 {
 
 .hero-text p {
   margin: 0 0 0 0;
-  font-size: 20px;
+  font-size: 18px;
   /* font-weight: 700; */
   /* line-height: 56px; */
   font-family: "Uniform Light";
@@ -479,7 +538,7 @@ h6 {
 #hero-divisi h1 {
   /* padding-left: 10px; */
   margin: 30px 0 10 0;
-  font-size: 60px;
+  font-size: 52px;
   /* font-weight: 700; */
   /* line-height: 56px; */
   font-family: "Kenyan Coffe";
@@ -1036,7 +1095,7 @@ hr.divisi {
 #about .about-container .title {
   color: #1e1e1e;
   /* font-weight: 700; */
-  font-size: 60px;
+  font-size: 52px;
   font-family: "Kenyan Coffe";
 }
 
